// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionPanel Panel basic behavior exists and renders with mock props 1`] = `
<div>
  <div
    aria-controls="panel-firstsection"
    aria-expanded={false}
    aria-selected={false}
    className="accordionPanel-label display--block span--100"
    id="label-firstsection"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="tab"
    tabIndex={0}
  >
    <Flex
      className="padding--bottom padding--top accordionPanel"
      rowReverse={false}
      tabIndex={-1}
    >
      <FlexItem>
        First Section
      </FlexItem>
      <FlexItem
        className="accordionPanel-icon"
        onClick={[Function]}
        shrink={true}
      >
        <Icon
          shape="chevron-down"
          size="xs"
        />
      </FlexItem>
    </Flex>
  </div>
  <Chunk
    aria-hidden={true}
    aria-labelledby="label-firstsection"
    className="accordionPanel-animator accordionPanel-animator--collapse"
    onTransitionEnd={[Function]}
    role="tabpanel"
    style={
      Object {
        "height": "0px",
      }
    }
  >
    <div
      className="accordionPanel-content"
    >
      <div
        className="runningText"
      >
        <p>
          Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
        </p>
      </div>
    </div>
  </Chunk>
</div>
`;

exports[`AccordionPanel Panel with custom icon exists and renders a custom icon 1`] = `
<div>
  <div
    aria-controls="panel-firstsection"
    aria-expanded={false}
    aria-selected={false}
    className="accordionPanel-label display--block span--100"
    id="label-firstsection"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="tab"
    tabIndex={0}
  >
    <Flex
      className="padding--bottom padding--top accordionPanel"
      rowReverse="all"
      tabIndex={-1}
    >
      <FlexItem>
        First Section
      </FlexItem>
      <FlexItem
        className="accordionPanel-icon"
        onClick={[Function]}
        shrink={true}
      >
        <Icon
          shape="plus"
          size="xs"
        />
      </FlexItem>
    </Flex>
  </div>
  <Chunk
    aria-hidden={true}
    aria-labelledby="label-firstsection"
    className="accordionPanel-animator accordionPanel-animator--collapse"
    onTransitionEnd={[Function]}
    role="tabpanel"
    style={
      Object {
        "height": "0px",
      }
    }
  >
    <div
      className="accordionPanel-content"
    >
      <div
        className="runningText"
      >
        <p>
          Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
        </p>
      </div>
    </div>
  </Chunk>
</div>
`;

exports[`AccordionPanel Panel with right aligned icon exists and renders icon left 1`] = `
<AccordionPanel
  indicatorAlign="left"
  indicatorIcon="chevron-down"
  indicatorIconSize="xs"
  isOpen={false}
  label="First Section"
  panelContent={
    <div
      className="runningText"
    >
      <p>
        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
      </p>
    </div>
  }
>
  <div>
    <div
      aria-controls="panel-firstsection"
      aria-expanded={false}
      aria-selected={false}
      className="accordionPanel-label display--block span--100"
      id="label-firstsection"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="tab"
      tabIndex={0}
    >
      <Flex
        className="padding--bottom padding--top accordionPanel"
        rowReverse="all"
        tabIndex={-1}
      >
        <Flex
          aria-busy={undefined}
          className="padding--bottom padding--top accordionPanel"
          direction="row"
          isLoading={undefined}
          rowReverse="all"
          tabIndex={-1}
        >
          <div
            aria-busy={undefined}
            className="flex flex--row atAll_flex--rowReverse padding--bottom padding--top accordionPanel"
            tabIndex={-1}
          >
            <FlexItem>
              <FlexItem
                aria-busy={undefined}
                isLoading={undefined}
              >
                <div
                  aria-busy={undefined}
                  className="flex-item"
                >
                  First Section
                </div>
              </FlexItem>
            </FlexItem>
            <FlexItem
              className="accordionPanel-icon"
              onClick={[Function]}
              shrink={true}
            >
              <FlexItem
                aria-busy={undefined}
                className="accordionPanel-icon"
                isLoading={undefined}
                onClick={[Function]}
                shrink={true}
              >
                <div
                  aria-busy={undefined}
                  className="flex-item flex-item--shrink accordionPanel-icon"
                  onClick={[Function]}
                >
                  <Icon
                    shape="chevron-down"
                    size="xs"
                  >
                    <span
                      className="svg svg--chevron-down"
                    >
                      <svg
                        className="svg-icon valign--middle"
                        height="16"
                        preserveAspectRatio="xMinYMin meet"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <use
                          xlinkHref="#icon-chevron-down--small"
                        />
                      </svg>
                    </span>
                  </Icon>
                </div>
              </FlexItem>
            </FlexItem>
          </div>
        </Flex>
      </Flex>
    </div>
    <Chunk
      aria-hidden={true}
      aria-labelledby="label-firstsection"
      className="accordionPanel-animator accordionPanel-animator--collapse"
      onTransitionEnd={[Function]}
      role="tabpanel"
      style={
        Object {
          "height": "0px",
        }
      }
    >
      <Chunk
        aria-busy={undefined}
        aria-hidden={true}
        aria-labelledby="label-firstsection"
        className="accordionPanel-animator accordionPanel-animator--collapse"
        isLoading={undefined}
        onTransitionEnd={[Function]}
        role="tabpanel"
        style={
          Object {
            "height": "0px",
          }
        }
      >
        <div
          aria-busy={undefined}
          aria-hidden={true}
          aria-labelledby="label-firstsection"
          className="chunk accordionPanel-animator accordionPanel-animator--collapse"
          onTransitionEnd={[Function]}
          role="tabpanel"
          style={
            Object {
              "height": "0px",
            }
          }
        >
          <div
            className="accordionPanel-content"
          >
            <div
              className="runningText"
            >
              <p>
                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
              </p>
            </div>
          </div>
        </div>
      </Chunk>
    </Chunk>
  </div>
</AccordionPanel>
`;

exports[`AccordionPanel Panel with toggle switch exists and renders a toggle switch 1`] = `
<AccordionPanel
  indicatorAlign="left"
  indicatorIcon="chevron-down"
  indicatorIconSize="xs"
  indicatorSwitch={true}
  isOpen={false}
  label="First Section"
  panelContent={
    <div
      className="runningText"
    >
      <p>
        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
      </p>
    </div>
  }
>
  <div>
    <div
      aria-controls="panel-firstsection"
      aria-expanded={false}
      aria-selected={false}
      className="accordionPanel-label display--block span--100"
      id="label-firstsection"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="tab"
      tabIndex={0}
    >
      <Flex
        className="padding--bottom padding--top accordionPanel"
        rowReverse="all"
        tabIndex={-1}
      >
        <Flex
          aria-busy={undefined}
          className="padding--bottom padding--top accordionPanel"
          direction="row"
          isLoading={undefined}
          rowReverse="all"
          tabIndex={-1}
        >
          <div
            aria-busy={undefined}
            className="flex flex--row atAll_flex--rowReverse padding--bottom padding--top accordionPanel"
            tabIndex={-1}
          >
            <FlexItem>
              <FlexItem
                aria-busy={undefined}
                isLoading={undefined}
              >
                <div
                  aria-busy={undefined}
                  className="flex-item"
                >
                  First Section
                </div>
              </FlexItem>
            </FlexItem>
            <FlexItem
              className="accordionPanel-icon"
              onClick={[Function]}
              shrink={true}
            >
              <FlexItem
                aria-busy={undefined}
                className="accordionPanel-icon"
                isLoading={undefined}
                onClick={[Function]}
                shrink={true}
              >
                <div
                  aria-busy={undefined}
                  className="flex-item flex-item--shrink accordionPanel-icon"
                  onClick={[Function]}
                >
                  <WithToggle
                    disabled={false}
                    id="firstsection-switch"
                    isActive={false}
                    name="firstsection"
                    onClick={[Function]}
                    tabIndex="-1"
                  >
                    <span
                      aria-pressed={false}
                      onKeyUp={[Function]}
                      role="button"
                      tabIndex="-1"
                    >
                      <ToggleSwitch
                        disabled={false}
                        id="firstsection-switch"
                        isActive={false}
                        name="firstsection"
                        onClick={[Function]}
                        tabIndex="-1"
                        toggleActive={[Function]}
                      >
                        <div
                          id="firstsection-switch"
                          onClick={[Function]}
                          tabIndex="-1"
                        >
                          <Button
                            aria-checked={false}
                            aria-labelledby="firstsection-label"
                            className="toggleSwitch"
                            component="button"
                            disabled={false}
                            onClick={[Function]}
                            reset={true}
                            role="switch"
                            tabIndex={-1}
                            type="button"
                          >
                            <button
                              aria-checked={false}
                              aria-labelledby="firstsection-label"
                              className="button button--reset toggleSwitch"
                              onClick={[Function]}
                              role="switch"
                              tabIndex={-1}
                              type="button"
                            >
                              <span
                                className="toggleSwitch-knob flex flex--center flex--alignCenter"
                              >
                                <Icon
                                  color="rgba(46, 62, 72, 0.6)"
                                  label="Toggle switch label"
                                  shape="cross"
                                  size="xxs"
                                >
                                  <span
                                    className="svg svg--cross"
                                  >
                                    <svg
                                      className="svg-icon valign--middle"
                                      height="12"
                                      label="Toggle switch label"
                                      preserveAspectRatio="xMinYMin meet"
                                      role="img"
                                      style={
                                        Object {
                                          "fill": "rgba(46, 62, 72, 0.6)",
                                        }
                                      }
                                      viewBox="0 0 12 12"
                                      width="12"
                                    >
                                      <use
                                        xlinkHref="#icon-cross--small"
                                      />
                                    </svg>
                                  </span>
                                </Icon>
                              </span>
                            </button>
                          </Button>
                        </div>
                      </ToggleSwitch>
                    </span>
                  </WithToggle>
                </div>
              </FlexItem>
            </FlexItem>
          </div>
        </Flex>
      </Flex>
    </div>
    <Chunk
      aria-hidden={true}
      aria-labelledby="label-firstsection"
      className="accordionPanel-animator accordionPanel-animator--collapse"
      onTransitionEnd={[Function]}
      role="tabpanel"
      style={
        Object {
          "height": "0px",
        }
      }
    >
      <Chunk
        aria-busy={undefined}
        aria-hidden={true}
        aria-labelledby="label-firstsection"
        className="accordionPanel-animator accordionPanel-animator--collapse"
        isLoading={undefined}
        onTransitionEnd={[Function]}
        role="tabpanel"
        style={
          Object {
            "height": "0px",
          }
        }
      >
        <div
          aria-busy={undefined}
          aria-hidden={true}
          aria-labelledby="label-firstsection"
          className="chunk accordionPanel-animator accordionPanel-animator--collapse"
          onTransitionEnd={[Function]}
          role="tabpanel"
          style={
            Object {
              "height": "0px",
            }
          }
        >
          <div
            className="accordionPanel-content"
          >
            <div
              className="runningText"
            >
              <p>
                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
              </p>
            </div>
          </div>
        </div>
      </Chunk>
    </Chunk>
  </div>
</AccordionPanel>
`;
